--- a/frontend/vite-project/src/css/Navbar.css
+++ b/frontend/vite-project/src/css/Navbar.css
@@ -1,6 +1,8 @@
 .sticky-navbar {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1000;
     width: 100vw;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+
