--- a/frontend/vite-project/src/css/mainPage.css
+++ b/frontend/vite-project/src/css/mainPage.css
@@ -1,14 +1,12 @@
-/* mainPage.css */
-
 .main-container {
     max-width: 600px;
-    margin: 100px auto;
-    padding: 30px;
+    margin: 10px auto;
+    padding: 10px;
     background-color: #f9f9f9;
     border-radius: 12px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     font-family: 'Segoe UI', sans-serif;
-    text-align: left;
+    text-align: center;
 }
 
 h2 {
@@ -45,4 +43,8 @@ strong {
     color: red;
     font-weight: bold;
     margin-bottom: 15px;
+}
+
+div#root{
+    background-color: white;
 }
