--- a/frontend/vite-project/src/css/mainPage.css
+++ b/frontend/vite-project/src/css/mainPage.css
@@ -1,12 +1,11 @@
 .main-container {
-    max-width: 600px;
-    margin: 10px auto;
     padding: 10px;
     background-color: #f9f9f9;
     border-radius: 12px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     font-family: 'Segoe UI', sans-serif;
     text-align: center;
+    height: 92vh;
 }
 
 h2 {
