Added colors to root.css

--- a/frontend/vite-project/src/css/root.css
+++ b/frontend/vite-project/src/css/root.css
@@ -7,4 +7,7 @@
     --white : white;
     --login-username: #c5bfa5;
     --login-pass: #fdfdfb;
+    --reset-pass : #25A547;
+    --black : black;
+    --change-pass: #3DD867;
 }
