--- a/frontend/vite-project/src/css/AdminLoanRanks.css
+++ b/frontend/vite-project/src/css/AdminLoanRanks.css
@@ -23,7 +23,7 @@ body {
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    max-width: 900px;
+    max-width: 1200px;
     width: 100%;
 }
 
@@ -37,7 +37,7 @@ body {
 
 .select-wrapper {
     text-align: center;
-    margin-bottom: 2rem;
+    margin: 3rem;
 }
 
 .select-wrapper label {
@@ -49,7 +49,7 @@ body {
 .select-wrapper select {
     padding: 0.5rem 1rem;
     border: 1px solid var(--white);
-    background-color: var(--forgot-pass);
+    background-color: var(--login-green);
     border-radius: 0.375rem;
     font-size: 1rem;
     transition: border-color 0.2s;
