Dodanie daty do rankingu / zmiana wywoływania funkcji rankingowych

--- a/frontend/vite-project/src/css/LoanUserInfo.css
+++ b/frontend/vite-project/src/css/LoanUserInfo.css
@@ -52,7 +52,7 @@ div#root{
 
 
 .btn.btn-secondary.active {
-    background-color: #0056b3;
+    background-color: var(--login-green);
     color: #fff;
 }
 
