--- a/frontend/vite-project/src/css/AdminLoanRanks.css
+++ b/frontend/vite-project/src/css/AdminLoanRanks.css
@@ -104,10 +104,13 @@ body {
     font-size: 18px;
 }
 
-
-
 .days {
     color: #2563eb;
     font-weight: 500;
 }
 
+.warning-alert{
+    margin-top: 50px;
+    text-align: center;
+    font-size: 1.5rem;
+}
