Dodanie powiadomien do logowania rejestracji

--- a/frontend/vite-project/src/css/RandomBookSlider.css
+++ b/frontend/vite-project/src/css/RandomBookSlider.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 2rem;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 100px auto;
     background-color: #fff;
     border-radius: 16px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
