--- a/frontend/vite-project/src/css/BookPage.css
+++ b/frontend/vite-project/src/css/BookPage.css
@@ -95,7 +95,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 1.5em;
     margin: 40px auto;
     flex-wrap: wrap;
 }
@@ -111,9 +111,9 @@ h2 {
     margin-left: 5px;
     padding: 6px 10px;
     border-radius: 12px;
-    border: 1px solid #ccc;
-    background-color: #2e2e2e;
-    color: white;
+    border: 2px solid #ccc;
+    color: black;
+    background-color: white;
     font-size: 14px;
     transition: border-color 0.2s;
 }
